<resources>
    <string name="app_name">201735039 To do List with Alarm</string>
    <string name="student_id">201735039</string>
    <string name="student_name">Can Kayacı</string>
    <string name="to_do_list">To do List</string>
    <string name="add_to_do">Add To do</string>
    <string name="todo_date">Todo Date</string>
    <string name="todo_time">Todo Time</string>
    <string name="save">Save</string>
    <string name="todo_name">Todo Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="saved_todo">Todo added!</string>
    <string name="todo_name_error">Todo name should be filled!</string>
    <string name="todo_date_error">Date is not valid format! Example : 22.05.2020</string>
    <string name="todo_time_error">Time is not valid format! Example 16:45</string>
    <string name="pick_date">PICK DATE</string>
    <string name="pick_time">PICK TIME</string>
    <string name="pick">PICK</string>
    <string name="delete_icon">Delete icon</string>
    <string name="delete_entry">Delete entry</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edited_todo">Todo edited</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="no_todos_message">Add some todo and come back here!</string>
    <string name="todo_date_time_error">Date and time must be greater than now!</string>
</resources>